cloudformation/infra/vpc/templates/vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  "Template for the creation of new vpc,subnets,igw,nat,route table, routes etc"
Parameters:
  Environment:
    Type: String
  Identifier:
    Type: String
  VpcCidrBlock:
    Description: Cidr Block Range for VPC
    Type: String
    Default: 10.0.0.0/16
Resources:
  MyVpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-VPC'
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVpc
      MapPublicIpOnLaunch: Yes
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: us-west-2a
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-PublicSubnet1'

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVpc
      MapPublicIpOnLaunch: Yes
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: us-west-2b
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-PublicSubnet2'

  PublicSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVpc
      MapPublicIpOnLaunch: Yes
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: us-west-2c
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-PublicSubnet3'


  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVpc
      MapPublicIpOnLaunch: No
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: us-west-2a
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-PrivateSubnet1'

  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVpc
      MapPublicIpOnLaunch: No
      CidrBlock: 10.0.5.0/24
      AvailabilityZone: us-west-2b
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-PrivateSubnet2'


  MyIGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}'
  MyVpcIGWAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref MyIGW
      VpcId: !Ref MyVpc
  MyNATEIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-NATIp'
  MyNatGat:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt MyNATEIP.AllocationId
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-NatGateway'
  MyPublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVpc
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-PublicRouteTable'
  MyPrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVpc
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-PrivateRouteTable'
  WWWRouteToIGW:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyIGW
      RouteTableId: !Ref MyPublicRouteTable
  PriSubnetToNat:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref MyNatGat
      RouteTableId: !Ref MyPrivateRouteTable

  PublicSubnet1Asso:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref MyPublicRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicSubnet2Asso:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref MyPublicRouteTable
      SubnetId: !Ref PublicSubnet2
  PublicSubnet3Asso:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref MyPublicRouteTable
      SubnetId: !Ref PublicSubnet3

  PrivateSubnet1Asso:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref MyPrivateRouteTable
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnet2Asso:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref MyPrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  Sg01Ingress01:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: 0.0.0.0/16
      GroupId: !Ref Sg01
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
  Sg01Ingress02:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: 0.0.0.0/16
      GroupId: !Ref Sg01
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
  Sg01Ingress03:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      SourceSecurityGroupId: !Ref Sg01
      GroupId: !Ref Sg01
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
  Sg02Ingress01:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      SourceSecurityGroupId: !Ref Sg02
      GroupId: !Ref Sg02
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
  Sg02Ingress02:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: 0.0.0.0/0
      GroupId: !Ref Sg02
      IpProtocol: -1
      FromPort: -1
      ToPort: -1

  Sg01Egress01:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: 0.0.0.0/0
      GroupId: !Ref Sg01
      IpProtocol: -1
      FromPort: -1
      ToPort: -1
  Sg02Egress01:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: 10.0.0.0/16
      GroupId: !Ref Sg02
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
  Sg02Egress02:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: 0.0.0.0/0
      GroupId: !Ref Sg02
      IpProtocol: -1
      FromPort: -1
      ToPort: -1



  Sg01:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'This is the description of group'
      GroupName: SgGroupName
      VpcId: !Ref MyVpc
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-Sg01'
  Sg02:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'This is the description of group'
      GroupName: Sg-02
      VpcId: !Ref MyVpc
      Tags:
        - Key: Name
          Value: !Sub '${Identifier}-${Environment}-Sg02'
          
Outputs:
  VPC:
    Description: VPC ID
    Value: !Ref MyVpc
  PublicSubnet1:
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Value: !Ref PublicSubnet2
  PublicSubnet3:
    Value: !Ref PublicSubnet3
  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
  Sg01:
    Description: 'This is the description of group'
    Value: !Ref Sg01
  Sg02:
    Description: 'This is the description of group'
    Value: !Ref Sg02
